--- a/jSnowMultiWin.htm
+++ b/jSnowMultiWin.htm
@@ -49,7 +49,7 @@ $(function(){ //example of start
 	});
 	$().jSnow({
 		flakes: 8
-		,flakeCode:'mosquito_fly_lg_clr.gif'
+		,flakeCode:'i/mosquito_fly_lg_clr.gif'
 		,flakeMinSize:50
 		,flakeMaxSize:80
 		,flakeColor:'rgba(255,255,255,.4)'
